# psykan

./: Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yaml
.github/workflows/: test.yml
crates/psykan/: Cargo.toml
crates/psykan-storage/: Cargo.toml
crates/psykan-storage/src/models/: run.rs
crates/psykan/src/: asset.rs  config.rs  lib.rs  traits.rs
crates/psykan/src/entities/: asset.rs  jobs.rs  mod.rs
crates/psykan/src/graph/: graph.rs  node.rs
crates/psykan/src/models/: run.rs
migration/src/: m20220101_000001_create_table.rs
py-psykan/: Cargo.toml  pyproject.toml  test.py
src/: main.rs
