[package]
name = "psykan"
authors = ["Bruno Bento"]
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "psykan"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.0"
