[package]
name = "psykan"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = "../../README.md"

[lib]
name = "psykan"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
pyo3-ffi = { workspace = true }
rayon = { workspace = true }
